--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 <header>
   <h1>Torneo de Playa</h1>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Beach_soccer_pictogram.svg/120px-Beach_soccer_pictogram.svg.png" alt="Logo">
+  <img src="IMG_5714.jpeg" alt="Logo">
 <div style="text-align: center; margin-top: 20px;">
   <button onclick="document.getElementById('audioFondo').play()" style="background-color:#2a6f97; color:white; padding:10px 15px; margin:5px; border:none; border-radius:5px; font-size:1em;">▶️ Play</button>
   
