--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Torneo de Playa</title>
+  <title>Copa Torero 2025</title>
   <style>
     body {
       background-color: #0d1b2a;
@@ -131,12 +131,12 @@
 <body>
 
 <header>
-  <h1>Torneo de Playa</h1>
+  <h1>Copa Torero 2025</h1>
   <img src="IMG_5714.jpeg" alt="Logo">
 <div style="text-align: center; margin-top: 20px;">
   <button onclick="document.getElementById('audioFondo').play()" style="background-color:#2a6f97; color:white; padding:10px 15px; margin:5px; border:none; border-radius:5px; font-size:1em;">▶️ Play</button>
   
-  <button onclick="document.getElementById('audioFondo').pause()" style="background-color:#b21818; color:white; padding:10px 15px; margin:5px; border:none; border-radius:5px; font-size:1em;">⏸️ Pause</button>
+  <button onclick="document.getElementById('audioFondo').pause()" style="background-color:#b21818; color:white; padding:10px 15px; margin:5px; border:none; border-radius:5px; font-size:1em;">⏸️ Pausa</button>
   
   <button onclick="document.getElementById('audioFondo').currentTime = 0" style="background-color:#415a77; color:white; padding:10px 15px; margin:5px; border:none; border-radius:5px; font-size:1em;">🔁 Reiniciar</button>
 </div>
@@ -161,27 +161,56 @@
   <h2>Tabla de Posiciones</h2>
   <table>
     <thead>
-      <tr><th>Pos</th><th>Equipo</th><th>Pts</th><th>GF</th><th>GC</th><th>DG</th></tr>
+      <tr><th>Pos</th><th>Equipo</th><th>Pts</th><th>GF</th><th>GC</th><th>DG</th><th>TR</th></tr>
     </thead>
     <tbody>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td></tr>
+      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><th>1</th></tr>
+      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><th>1</th></tr>
+      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><th>1</th></tr>
+      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><th>1</th></tr>
+      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><th>1</th></tr>
+      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><th>1</th></tr>
+      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><th>1</th></tr>
+      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><th>1</th></tr>
+      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><th>1</th></tr>
+      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><th>1</th></tr>
+      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><th>1</th></tr>
+      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><th>1</th></tr>
     </tbody>
   </table>
 
   <h2>Fecha 1</h2>
-  <table><thead><tr><th>Local</th><th>Goles L</th><th>Rojas L</th><th>Goles V</th><th>Rojas V</th><th>Visitante</th><th>Sede</th></tr></thead>
-  <tbody><tr><td>Los Delfines</td><td>3</td><td>0</td><td>1</td><td>0</td><td>Bruma FC</td><td>Playa Norte</td></tr></tbody></table>
+  <table>
+    <thead><tr><th>Local</th><th>Rojas L</th><th>Goles L</th><th>Goles V</th><th>Rojas V</th><th>Visitante</th><th>Sede</th></tr></thead>
+  <tbody>
+    <tr><td>Los Delfines</td><td>3</td><td>0</td><td>1</td><td>0</td><td>Bruma FC</td><td>Playa Norte</td></tr>
+    <tr><td>Los Delfines</td><td>3</td><td>0</td><td>1</td><td>0</td><td>Bruma FC</td><td>Playa Norte</td></tr>
+    <tr><td>Los Delfines</td><td>3</td><td>0</td><td>1</td><td>0</td><td>Bruma FC</td><td>Playa Norte</td></tr>
+    <tr><td>Los Delfines</td><td>3</td><td>0</td><td>1</td><td>0</td><td>Bruma FC</td><td>Playa Norte</td></tr>
+    <tr><td>Los Delfines</td><td>3</td><td>0</td><td>1</td><td>0</td><td>Bruma FC</td><td>Playa Norte</td></tr>
+    <tr><td>Los Delfines</td><td>3</td><td>0</td><td>1</td><td>0</td><td>Bruma FC</td><td>Playa Norte</td></tr>
+  </tbody>
+  </table>
 
   <h2>Fecha 2</h2>
-  <table><thead><tr><th>Local</th><th>Goles L</th><th>Rojas L</th><th>Goles V</th><th>Rojas V</th><th>Visitante</th><th>Sede</th></tr></thead>
-  <tbody><tr><td>Arena FC</td><td>2</td><td>1</td><td>2</td><td>0</td><td>Mar y Sol</td><td>Playa Sur</td></tr></tbody></table>
+  <table>
+    <thead><tr><th>Local</th><th>Rojas L</th><th>Goles L</th><th>Goles V</th><th>Rojas V</th><th>Visitante</th><th>Sede</th></tr></thead>
+  <tbody>
+    <tr><td>Arena FC</td><td>2</td><td>1</td><td>2</td><td>0</td><td>Mar y Sol</td><td>Playa Sur</td></tr>
+    <tr><td>Arena FC</td><td>2</td><td>1</td><td>2</td><td>0</td><td>Mar y Sol</td><td>Playa Sur</td></tr>
+    <tr><td>Arena FC</td><td>2</td><td>1</td><td>2</td><td>0</td><td>Mar y Sol</td><td>Playa Sur</td></tr>
+    <tr><td>Arena FC</td><td>2</td><td>1</td><td>2</td><td>0</td><td>Mar y Sol</td><td>Playa Sur</td></tr>
+    <tr><td>Arena FC</td><td>2</td><td>1</td><td>2</td><td>0</td><td>Mar y Sol</td><td>Playa Sur</td></tr>
+    <tr><td>Arena FC</td><td>2</td><td>1</td><td>2</td><td>0</td><td>Mar y Sol</td><td>Playa Sur</td></tr>
+  </tbody>
+  </table>
 
   <h2>Fecha 3</h2>
-  <table><thead><tr><th>Local</th><th>Goles L</th><th>Rojas L</th><th>Goles V</th><th>Rojas V</th><th>Visitante</th><th>Sede</th></tr></thead>
+  <table><thead><tr><th>Local</th><th>Rojas L</th><th>Goles L</th><th>Goles V</th><th>Rojas V</th><th>Visitante</th><th>Sede</th></tr></thead>
   <tbody><tr><td>La Brisa</td><td>1</td><td>0</td><td>0</td><td>0</td><td>Costanera Boys</td><td>Playa Este</td></tr></tbody></table>
 
   <h2>Fecha 4</h2>
-  <table><thead><tr><th>Local</th><th>Goles L</th><th>Rojas L</th><th>Goles V</th><th>Rojas V</th><th>Visitante</th><th>Sede</th></tr></thead>
+  <table><thead><tr><th>Local</th><th>Rojas L</th><th>Goles L</th><th>Goles V</th><th>Rojas V</th><th>Visitante</th><th>Sede</th></tr></thead>
   <tbody><tr><td>Bruma FC</td><td>0</td><td>0</td><td>4</td><td>0</td><td>Sombras del Mar</td><td>Playa Norte</td></tr></tbody></table>
 </div>
 <div id="elim" class="tab-content">
@@ -210,6 +239,11 @@
       <div class="match"><span>Ganador A</span><span>vs</span><span>Ganador B</span></div>
       <div class="match"><span>Ganador B</span><span>vs</span><span>Ganador C</span></div>
       <div class="match"><span>Ganador A</span><span>vs</span><span>Ganador C</span></div>
+    </div>
+
+    <div class="round">
+      <h3>Campeón</h3>
+      <div class="match"><span class="bold">Ganador A</span></div>
     </div>
   </div>
 
