--- a/index.html
+++ b/index.html
@@ -164,18 +164,18 @@
       <tr><th>Pos</th><th>Equipo</th><th>Pts</th><th>GF</th><th>GC</th><th>DG</th><th>TR</th></tr>
     </thead>
     <tbody>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><th>1</th></tr>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><th>1</th></tr>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><th>1</th></tr>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><th>1</th></tr>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><th>1</th></tr>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><th>1</th></tr>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><th>1</th></tr>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><th>1</th></tr>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><th>1</th></tr>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><th>1</th></tr>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><th>1</th></tr>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><th>1</th></tr>
+      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><td>1</td></tr>
+      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><td>1</td></tr>
+      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><td>1</td></tr>
+      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><td>1</td></tr>
+      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><td>1</td></tr>
+      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><td>1</td></tr>
+      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><td>1</td></tr>
+      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><td>1</td></tr>
+      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><td>1</td></tr>
+      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><td>1</td></tr>
+      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><td>1</td></tr>
+      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><td>1</td></tr>
     </tbody>
   </table>
 
@@ -206,12 +206,30 @@
   </table>
 
   <h2>Fecha 3</h2>
-  <table><thead><tr><th>Local</th><th>Rojas L</th><th>Goles L</th><th>Goles V</th><th>Rojas V</th><th>Visitante</th><th>Sede</th></tr></thead>
-  <tbody><tr><td>La Brisa</td><td>1</td><td>0</td><td>0</td><td>0</td><td>Costanera Boys</td><td>Playa Este</td></tr></tbody></table>
+  <table>
+    <thead><tr><th>Local</th><th>Rojas L</th><th>Goles L</th><th>Goles V</th><th>Rojas V</th><th>Visitante</th><th>Sede</th></tr></thead>
+  <tbody>
+    <tr><td>La Brisa</td><td>1</td><td>0</td><td>0</td><td>0</td><td>Costanera Boys</td><td>Playa Este</td></tr>
+    <tr><td>La Brisa</td><td>1</td><td>0</td><td>0</td><td>0</td><td>Costanera Boys</td><td>Playa Este</td></tr>
+    <tr><td>La Brisa</td><td>1</td><td>0</td><td>0</td><td>0</td><td>Costanera Boys</td><td>Playa Este</td></tr>
+    <tr><td>La Brisa</td><td>1</td><td>0</td><td>0</td><td>0</td><td>Costanera Boys</td><td>Playa Este</td></tr>
+    <tr><td>La Brisa</td><td>1</td><td>0</td><td>0</td><td>0</td><td>Costanera Boys</td><td>Playa Este</td></tr>
+    <tr><td>La Brisa</td><td>1</td><td>0</td><td>0</td><td>0</td><td>Costanera Boys</td><td>Playa Este</td></tr>
+  </tbody>
+  </table>
 
   <h2>Fecha 4</h2>
-  <table><thead><tr><th>Local</th><th>Rojas L</th><th>Goles L</th><th>Goles V</th><th>Rojas V</th><th>Visitante</th><th>Sede</th></tr></thead>
-  <tbody><tr><td>Bruma FC</td><td>0</td><td>0</td><td>4</td><td>0</td><td>Sombras del Mar</td><td>Playa Norte</td></tr></tbody></table>
+  <table>
+    <thead><tr><th>Local</th><th>Rojas L</th><th>Goles L</th><th>Goles V</th><th>Rojas V</th><th>Visitante</th><th>Sede</th></tr></thead>
+  <tbody>
+    <tr><td>Bruma FC</td><td>0</td><td>0</td><td>4</td><td>0</td><td>Sombras del Mar</td><td>Playa Norte</td></tr>
+    <tr><td>Bruma FC</td><td>0</td><td>0</td><td>4</td><td>0</td><td>Sombras del Mar</td><td>Playa Norte</td></tr>
+    <tr><td>Bruma FC</td><td>0</td><td>0</td><td>4</td><td>0</td><td>Sombras del Mar</td><td>Playa Norte</td></tr>
+    <tr><td>Bruma FC</td><td>0</td><td>0</td><td>4</td><td>0</td><td>Sombras del Mar</td><td>Playa Norte</td></tr>
+    <tr><td>Bruma FC</td><td>0</td><td>0</td><td>4</td><td>0</td><td>Sombras del Mar</td><td>Playa Norte</td></tr>
+    <tr><td>Bruma FC</td><td>0</td><td>0</td><td>4</td><td>0</td><td>Sombras del Mar</td><td>Playa Norte</td></tr>
+  </tbody>
+  </table>
 </div>
 <div id="elim" class="tab-content">
   <h2>Eliminatorias</h2>
