--- a/index.html
+++ b/index.html
@@ -161,21 +161,21 @@
   <h2>Tabla de Posiciones</h2>
   <table>
     <thead>
-      <tr><th>Pos</th><th>Equipo</th><th>Pts</th><th>GF</th><th>GC</th><th>DG</th><th>TR</th></tr>
+      <tr><th>Pos</th><th>Equipo</th><th>Nombre</th><th>Pts</th><th>GF</th><th>GC</th><th>DG</th><th>TR</th></tr>
     </thead>
     <tbody>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><td>1</td></tr>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><td>1</td></tr>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><td>1</td></tr>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><td>1</td></tr>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><td>1</td></tr>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><td>1</td></tr>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><td>1</td></tr>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><td>1</td></tr>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><td>1</td></tr>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><td>1</td></tr>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><td>1</td></tr>
-      <tr><td>1</td><td>Los Delfines</td><td>9</td><td>12</td><td>3</td><td>+9</td><td>1</td></tr>
+      <tr><td>1</td><td>Palestino</td><th>Nico</th><td>10</td><td>8</td><td>1</td><td>+7</td><td>1</td></tr>
+      <tr><td>2</td><td>Beleneses</td><th>Equipo</th><td>9.25</td><td>6</td><td>1</td><td>+5</td><td>1</td></tr>
+      <tr><td>3</td><td>Bulgaria</td><th>Equipo</th><td>7.5</td><td>8</td><td>6</td><td>+2</td><td>1</td></tr>
+      <tr><td>4</td><td>St Gallen</td><th>Equipo</th><td>7.5</td><td>4</td><td>4</td><td>+0</td><td>1</td></tr>
+      <tr><td>5</td><td>Cracovia</td><th>Equipo</th><td>7.25</td><td>2</td><td>2</td><td>+0</td><td>1</td></tr>
+      <tr><td>6</td><td>Malmo</td><th>Equipo</th><td>6.25</td><td>7</td><td>4</td><td>+3</td><td>1</td></tr>
+      <tr><td>7</td><td>Nothampton</td><th>Equipo</th><td>6.25</td><td>3</td><td>1</td><td>+2</td><td>1</td></tr>
+      <tr><td>8</td><td>Tijuana</td><th>Equipo</th><td>4.5</td><td>7</td><td>8</td><td>-1</td><td>1</td></tr>
+      <tr><td>9</td><td>VVV-Venlo</td><th>Equipo</th><td>3.25</td><td>3</td><td>5</td><td>-2</td><td>1</td></tr>
+      <tr><td>10</td><td>CD Lugo</td><th>Equipo</th><td>1.25</td><td>1</td><td>7</td><td>-6</td><td>1</td></tr>
+      <tr><td>11</td><td>Everton Viña</td><th>Equipo</th><td>0</td><td>0</td><td>6</td><td>-6</td><td>1</td></tr>
+      <tr><td>12</td><td>Tours FC</td><th>Equipo</th><td>-0.5</td><td>2</td><td>6</td><td>-4</td><td>1</td></tr>
     </tbody>
   </table>
 
