--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
       <div class="match"><span><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px"><strong>Equipo 5</strong></span><span>vs</span><span><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Equipo 6</span></div>
       <div class="match"><span><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px"><strong>Equipo 7</strong></span><span>vs</span><span><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Equipo 8</span></div>
       <div class="match"><span><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px"><strong>Equipo 9</strong></span><span>vs</span><span><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Equipo 10</span></div>
-      <div class="match"><span><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px"><strong>Equipo 11/</strong></span><span>vs</span><span><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Equipo 12</span></div>
+      <div class="match"><span><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px"><strong>Equipo 11</strong></span><span>vs</span><span><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Equipo 12</span></div>
     </div>
 
     <div class="round">
