--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <tr><td>8</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tijuana</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Manu</td><td>4.5</td><td>7</td><td>8</td><td>-1</td><td>1</td></tr>
       <tr><td>9</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">VVV-Venlo</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Fede</td><td>3.25</td><td>3</td><td>5</td><td>-2</td><td>1</td></tr>
       <tr><td>10</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">CD Lugo</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Rama</td><td>1.25</td><td>1</td><td>7</td><td>-6</td><td>1</td></tr>
-      <tr><td>11</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Everton Viña</td><th><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Joaco</td><td>0</td><td>0</td><td>6</td><td>-6</td><td>1</td></tr>
+      <tr><td>11</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Everton Viña</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Joaco</td><td>0</td><td>0</td><td>6</td><td>-6</td><td>1</td></tr>
       <tr><td>12</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tours FC</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Charly</td><td>-0.5</td><td>2</td><td>6</td><td>-4</td><td>1</td></tr>
     </tbody>
   </table>
